# kognitos-roi-benchmark

./: .gitignore  Makefile  README.md  benchmark.py  db_schema.sql  generate_invoices.py  pyproject.toml
src/: auditing.py  database.py  processing.py
